# nanopinv

./: .gitignore  README.md  justfile  pyproject.toml
examples/crosshole_GPR_tomography/: crosshole_GPR_tomography copy 2.ipynb  crosshole_GPR_tomography copy 3.ipynb  crosshole_GPR_tomography copy.ipynb  crosshole_GPR_tomography.ipynb  prior.ipynb  test_eikonal.ipynb  test_jax copy 2.ipynb  test_jax copy.ipynb  test_jax.ipynb
nanopinv/: _typing.py  distribution.py  physics.py  physics_jax.py  prior.py  sampler.py  sampler_jax.py  types.py  utils.py  variance.py
nanopinv/physics/eikonal/: __init__.py  _common.py  nanopinv_fsm.py  nanopinv_test_solver1.py  nanopinv_test_solver2.py  nanopinv_test_solver3.py  nanopinv_test_solver4.py  skfmm_fmm.py
